fix mask-image elements on mobile (add exact sizing)

--- a/static/sass/music.sass
+++ b/static/sass/music.sass
@@ -113,7 +113,7 @@ input[type=range]
       position: relative
       z-index: 1
       max-width: 30em
-      min-height: 20em
+      min-height: 15em
       max-height: 45vh
       margin: 0 auto
       margin-bottom: 2em
@@ -149,10 +149,8 @@ input[type=range]
                   top: 50%
                   left: 50%
                   transform: translate(-50%, -50%)
-                  width: 80%
-                  height: 80%
-                  -webkit-mask-size: cover
-                  mask-size: cover
+                  -webkit-mask-size: 80%
+                  mask-size: 80%
                   background-color: rgba(0, 0, 0, 0.0)
 
         .song-info
@@ -198,14 +196,14 @@ input[type=range]
         margin: 0 auto
 
         %icon-size
-          -webkit-mask-size: cover
-          mask-size: cover
+          -webkit-mask-size: 40px
+          mask-size: 40px
           width: 40px
           height: 40px
 
         %smaller-icon-size
-          -webkit-mask-size: cover
-          mask-size: cover
+          -webkit-mask-size: 30px
+          mask-size: 30px
           width: 30px
           height: 30px
 
