--- a/static/sass/portfolio.sass
+++ b/static/sass/portfolio.sass
@@ -51,14 +51,15 @@ a
           @extend %btn-click
 
   .chevron-down
+    //@extend %red-border
     position: absolute
     z-index: 1
     bottom: 0
     cursor: pointer
     width: 40px
     height: 40px
-    -webkit-mask-size: cover
-    mask-size: cover
+    -webkit-mask-size: 40px
+    mask-size: 40px
 
 // Breakpoints
 @media(min-width: 700px)
